<resources>
    <string name="app_name">Expenses Manager</string>
    <string name="limparCampos">Clear Fields</string>
    <string name="limparCamposNovoGasto">Fields Cleaned</string>
    <string name="nomeNovoGasto">Expense Name</string>
    <string name="valorNovoGasto">Expense Amount</string>
    <string name="erroNomeGasto">Name cannot be empty</string>
    <string name="valorDoGasto">Spend amount cannot be empty</string>
    <string name="toastPrintNomeGasto">\Gasto:</string>
    <string name="toastPrintValorGasto">\nValor: R$</string>
    <string name="radioButtonContasCasa">House</string>
    <string name="radioButtonMercado">Marketplace</string>
    <string name="radioButtonOutros">Others</string>
    <string name="nenhumTipoGastoSelecionado">No Spend Type selected</string>
    <string name="checkBoxGastoRelevante">Is spending relevant?</string>
    <string name="gastoNaoRelevante">Non-relevant expense</string>
    <string name="gastoRelevante">Relevant expense</string>
    <string name="spinnerTextoDescontarSalario">Do you want to deduct from income?</string>
    <string name="spinnerTextoTipoPagamento">Select the payment method made</string>
    <string name="spinnerDinheiro">Money</string>
    <string name="spinnerCredito">Credit</string>
    <string name="spinnerDebito">Debit</string>
    <string name="tipoPagamentoSelecionado">selected</string>
    <string name="nenhumPagamentoSelecionado">No payment type selected</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="textViewNomeGasto">Expense:</string>
    <string name="textViewValor">Value:</string>
    <string name="textViewTipoGasto">Expense Type</string>
    <string name="textViewTipoDoGasto">Expense Type:</string>
    <string name="textViewRelevante">Relevant:</string>
    <string name="textViewTipoPagamento">Payment:</string>
    <string name="site_utfpr">www.utfpr.edu.br</string>
    <string name="textViewNomeAluno">Felipe Bigarelli Dantas da Costa</string>
    <string name="textViewCurso">Software Engineering</string>
    <string name="textViewEmail">felipecosta.1999@alunos.utfpr.edu.br</string>
    <string name="textViewDescricaoApp">"   The application makes it possible to manage expenses, being able to add a new expense according to its characteristics that, with a defined time goal together with the person's income, will return whether your balance at the end was positive or negative."</string>
    <string name="buttonAdicionarGasto">New Expense</string>
    <string name="buttonSobre">About</string>
    <string name="nao_cadastrado">Not registered</string>
    <string name="buttonCancelar">Cancel</string>

    <string name="inserirNovoGasto">Insert new Expense</string>
    <string name="setTitleNovoGasto">New Expense</string>
    <string name="setTitleAlterarGasto">Change Expense</string>
    <string name="holderTipoGastoCasa">House</string>
    <string name="holderTipoGastoMercado">Marketplace</string>
    <string name="holderTipoGastoOutros">Others</string>
    <string name="holderRelevanteSim">Yes</string>
    <string name="holderRelevanteNao">No</string>
    <string name="noTypeSelected">No type selected</string>
    <string name="confirmRemoveExpend">Confirm exclusion?</string>

    <string name="menuItemAdicionar">Add New</string>
    <string name="menuItemSobre">About</string>
    <string name="menuItemSalvarGasto">Save Expend</string>
    <string name="menuItemLimparCampos">Clear</string>
    <string name="menuItemEditar">Edit</string>
    <string name="menuItemExcluir">Delete</string>
    <string name="menuItemVoltarSobre">Go Back</string>
    <string name="menuItemTrocarTema">Change Theme</string>
    <string name="menuItemSalvar">Save</string>
    <string name="menuItemCancelar">Cancel</string>

    <string name="contaCasa">House Bill</string>
    <string name="mercado">Marketplace</string>
    <string name="textViewDescricaoTipoGasto">Description</string>
    <string name="mudarTipoGasto">Change Expense Type</string>
    <string name="novoTipoGasto">New Expense Type</string>
    <string name="aviso">Notice</string>
    <string name="ok">Ok</string>
    <string name="confirmar">Confirm</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="descricaoVazia">Empty description</string>
    <string name="descricao_usada">Description already in use</string>


    <string name="types">Types</string>
    <string name="tipo_usado">Type in use</string>
    <string name="deseja_realmente_apagar">Delete Expense?</string>
    <string name="textViewSelecionarTipoGasto">Select an Expense Type</string>
    <string name="radioButtonDinheiro">Money</string>
    <string name="radioButtonCredito">Credit</string>
    <string name="radioButtonDebito">Debit</string>

    <string name="holderDinheiro">Money</string>
    <string name="holderCredito">Credit</string>
    <string name="holderDebito">Debit</string>

    <string name="menuItemTipos">Types</string>
    <string name="menuItemApagar">Delete</string>
    <string name="menuItemAbrir">Open</string>
    <string name="menuItemNovoTipo">Add</string>
    <string name="menuItemLimparCampoTipo">Clear</string>
    <string name="textViewValorNovaMeta">Enter your Income</string>

    <string name="textViewDataNovaMeta">Date Goal</string>
    <string name="alterar_meta">Change Goal</string>
    <string name="meta">Goal</string>

    <string name="deseja_realmente_apagar_meta">Delete Goal?</string>
    <string name="menuItemAdicionarMeta">Add Goal</string>
    <string name="nova_meta">New Goal</string>
    <string name="meta_vazia">Empty Goal</string>
    <string name="data_meta_vazia">Empty Goal Date</string>
    <string name="menuItemMetas">Goal</string>


</resources>