<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewGastoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/spinnerTiposGasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/inserirNovoGasto"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNomeGasto"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nomeNovoGasto"
            app:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeGasto"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/valorNovoGasto"
            app:autoSizeTextType="none"
            app:layout_constraintStart_toStartOf="@+id/editTextNomeGasto"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeGasto" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/checkBoxGastoRelevante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/checkBoxGastoRelevante"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSelecionarTiposGastos" />

        <TextView
            android:id="@+id/spinnerTextoCreditoDebito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/spinnerTextoTipoPagamento"
            app:layout_constraintStart_toStartOf="@+id/checkBoxGastoRelevante"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxGastoRelevante" />

        <Spinner
            android:id="@+id/spinnerSelecionarTiposGastos"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textViewSelecionarTipoGasto"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelecionarTipoGasto" />

        <TextView
            android:id="@+id/textViewSelecionarTipoGasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textViewSelecionarTipoGasto"
            app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

        <RadioGroup
            android:id="@+id/radioGroupTiposPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spinnerTextoCreditoDebito"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTextoCreditoDebito">

            <RadioButton
                android:id="@+id/radioButtonDinheiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonDinheiro" />

            <RadioButton
                android:id="@+id/radioButtonCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonCredito" />

            <RadioButton
                android:id="@+id/radioButtonDebito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioButtonDebito" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

